Fix popup overlap

--- a/wp-content/themes/fxprotools-theme/assets/sass/module-styles/_custom.scss
+++ b/wp-content/themes/fxprotools-theme/assets/sass/module-styles/_custom.scss
@@ -1796,8 +1796,9 @@ p.logo-text {
 			display: block;
 			border-radius: 50%;
 			position: absolute;
-			top: 0;
+			top: 50%;
 			left: 0;
+			transform: translateY(-50%);
 		}
 		.customer-name{
 			font-weight: bold;
